--- a/cyclope/core/collections/templates/collections/collection_categories_hierarchy.html
+++ b/cyclope/core/collections/templates/collections/collection_categories_hierarchy.html
@@ -4,8 +4,8 @@
 
 <script type="text/javascript">
 jQuery(document).ready(function(){
-  $('.collection_categories_hierarchy ul').css('display', 'none');
-  $(".collection_categories_hierarchy ul").first().css('display', 'block');
+  $('.collection.categories_hierarchy ul').css('display', 'none');
+  $(".collection.categories_hierarchy ul").first().css('display', 'block');
   $('.expand_collapse').click(function() {
     if ($(this).text() == '+') $(this).text('-');
     else $(this).text('+');
