refactor to make BaseContent abstract. added url recreation after MenuItem.save().

--- a/cyclope/apps/articles/templates/articles/article_detail.html
+++ b/cyclope/apps/articles/templates/articles/article_detail.html
@@ -14,7 +14,7 @@ TODO(nicoechaniz): finish adaptation from smarty to django. add trans to text th
 
 <!-- TODO(nicoechaniz): uncomment and fix when breadcrumbs and tagging are implemented
 -->
-  <span  class="breadcrumb">{% trans "Breadcrumb" %}: <a href="/">Principal</a> / {$ruta}</span>
+  <span  class="breadcrumb">{% trans "Breadcrumb" %}: <a href="/">Principal</a> / </span>
   <span class="tags">{% trans "Tags" %}: {{ article.tags }}</span>
 
   {% if article.pretitle %}
